[package]
name = "tl-lang-syn"
version = "0.0.1"
description = "Nom parser for TL language schema"
authors = ["Nguyen Duc My <hcpl.prog@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/tl-lang-syn"
repository = "https://github.com/hcpl/tl-lang"
keywords = ["parse", "parser", "telegram"]
categories = ["parser-implementations"]

[badges]
travis-ci = { repository = "hcpl/tl-lang" }


[dependencies]
macro-attr = "0.2"
nom = { version = "4", optional = true }

[build-dependencies]
version_check = "0.1"

[dev-dependencies]
lipsum = "0.5"
pretty_assertions = "0.5"

[features]
default = []
clone-impls = []
debug-impls = []
eq-impls = []
hash-impls = []
parsing = ["nom"]
printing = []


[[example]]
name = "parse_print"
required-features = ["parsing", "printing", "debug-impls"]

[[test]]
name = "roundtrip"
required-features = ["parsing", "printing", "eq-impls"]


[package.metadata.docs.rs]
all-features = true
